# mumps

./: server.cpp  stem.cpp  strmanip.cpp  sym.cpp  sym.cpp.in  sysfunc.cpp.in  tree.cpp.in  write.c  zcommands.c
Mumps-Language-Processors/Legacy-Mumps-Interpreter/: README  address  btree.c  btree.h  cgi.h  check.mps  compile.script  convert.mps  defines.h  defs.h  externs.h  global.h  init.mps  insert  interpreter.html  keyfix.h  knuth.mps  logic.c  math.c  mathf.c  mathi.c  memsize.h  mumps.c  open.h  parse.c  stateVector.h  stem.h  strmax.h  sym.c  sys1.c  sysparms.h  test.mps  time.mps  tmplts.h  zfcn.c
Mumps-Language-Processors/Mumps-Interpreter-Compiler-Library/: CompileNativeSharedMumps.script  CompileNativeSingleUserMumps.script  CompileSqliteMumps.script  ConfigureNativeMumps.script  ConfigureSqliteMumps.script  CreateSqliteDB.script  CreateSqliteDB.script.in  Makefile  Makefile.in  Makefile.mdh  Makefile.mdh.in  README.txt  abrtx.c  arith.cpp  at-test.c  bifs.cpp  bifs.cpp.in  bmgsubs.c  btree-fcns.cpp  btree-fcns.cpp.in  btree.cpp  btree.cpp.in  compiler-lock.c  compiler-open.c  config.status  configure  configure.ac  copyright-notice.c  dif.script  doty.c  epi.c  fcninit.c  fcninit.c.in  for.c  globalarray.c  globalb.cpp  globalb.cpp.in  if.c  interp.cpp  interp.cpp.in  (+31 more)
Mumps-Language-Processors/Mumps-Interpreter-Compiler-Library/Checkout/validate-compiler/: Makefile  backref.mps  checkout.mps  do1.mps  extractTests.mps  fcns.mps  for1.mps  for2.mps  for3.mps  globals1.mps  interp1  interp1.mps  interp2  interp2.mps  kill.mps  lclOrder.mps  new01.mps  new02.mps  new03.mps  numTests  numTests.mps  pieceTests.mps  qtst.mps  s16a.mps  s6.mps  s6a.mps  s6b.mps  s6c.mps  s6d.mps  validate.script  zfunctions.mps
Mumps-Language-Processors/Mumps-Interpreter-Compiler-Library/Checkout/validate-interpreter/: checkout.mps  extractTests.mps  ops.cpp  validate.script
Mumps-Language-Processors/Mumps-Interpreter-Compiler-Library/Documentation/: AUTHORS  MumpsUsersGuide.odt
Mumps-Language-Processors/Mumps-Interpreter-Compiler-Library/include/mumpsc/: arith.h  arith.h.in  btree.h  btree.h.in  builtin.h  compiler-globals-ext.h  compiler-globals.h  compiler-macros.h  config.h  cppsysfunc.h  defines.h  defines.h.in  errors.h  externs.h  global.h  globalClass.h  globalOrder.h.in  inline.h  keyfix.h  libmpscpp.h  libmpscpp.h.in  memsize.h.in  mstringClass.h  numSetup.h  stateVector.h  strmanip.h  strmax.h  sym.h  sysfunc.h  sysparms.h  sysparms.h.in
Mumps-Projects/Genome-Search/: START_HERE.txt
Mumps-Projects/Genome-Search/common-code/: MDH-interface.h  definitions.h  extractDNA.cpp  extractDNA.cpp.orig  extractDNA.mps  extractNT.cpp  extractNT.cpp.orig  extractNT.mps  globals.h  load-params.cpp  reformat.cpp  reformat.cpp.orig  reformat.mps
Mumps-Projects/Genome-Search/idf-calc/: 00_README_FIRST  idf-weights-sorted-dat.readme  index-nt-idf.script
Mumps-Projects/Genome-Search/idf-calc/idf-code/: Makefile  bash-command.cpp  compute-idf (copy).cpp  compute-idf.cpp  extractDNA  extractNT  file_size.cpp  file_size1.cpp  genome.cpp
Mumps-Projects/Genome-Search/indexing/: 00_README  index.script  readme.split  retrieve.script  tstquery  tstquery1
Mumps-Projects/Genome-Search/indexing/code/: Document_Term_Matrix.cpp  Makefile  RetrieveGenomeMumps.cpp  RetrieveGenomeMumps.cpp.orig  RetrieveGenomeMumps.mps  chop  chop.cpp  count-seq  count-seq.cpp  endtime.mps  extract-titles.cpp  file_size.cpp  file_size1.cpp  genome.cpp  idf-weights.cpp  index-thread.script  indexing-controls.script  preprocess.cpp  reformat.cpp  show-rslts.mps  starttime.mps  weighted-matrices.cpp
Mumps-Projects/Genome-Search/indexing/doc/: idf.html  shred996.odt
Mumps-Projects/Genome-Search/indexing/sample-data/: genbank.sample.database
Mumps-Projects/Glade-Compiler/: GtkCompiler.mps  ReadMeFirst.txt  gtk.css
Mumps-Projects/Glade-Compiler/C-Examples/Button-Widgets/: Makefile  gtk  gtk1.h  gtk2.h  mumps.glade  mumps.glade~  on.ComboBoxExample.changed.h  on.ExampleFontButton.font.set.h  on.ExampleSwitch.state.set.h  on.SampleColorButton.color.set.h  on.SampleGtkButton.clicked.h  on.SampleGtkCheckButton.toggled.h  on.SampleGtkRadio1.toggled.h  on.SampleGtkRadio2.toggled.h  on.SampleGtkRadio3.toggled.h  on.SampleGtkToggleButton.toggled.h  on.cbentry.changed.h  on.stack.switcher.button.release.event.h
Mumps-Projects/Glade-Compiler/C-Examples/Input-Widgets/: gtk  gtk.c  mumps.glade  mumps.glade~  (+4 more)
Mumps-Projects/Glade-Compiler/Mumps-Examples/: ReadMe.txt  user-notes.txt
Mumps-Projects/ISR/: ReadMed.txt  convert-db.script  ohsu-medline-split-tgz.readme
Mumps-Projects/ISR/MDH-version/: Document_Term_Matrix.cpp  FrequencyFilter.cpp  MAXDOCS  Makefile  RetrieveMedlineMumps.cpp  RetrieveMedlineMumps.cpp.orig  basic.stop.words  cluster-docs.cpp  cluster-terms.cpp  compileRetrieve.script  control.script  definitions.h  discrim-coeff.cpp  doc-doc-weighted.cpp  endtime.mps  extract-titles.cpp  hyper-clusters.cpp  idf-weights.cpp  index.script  isr.cpp  load-params.cpp  medlineRetrieve  medlineRetrieve.cpp  medlineRetrieve.mps  preprocess.cpp  proxLoad.cpp  proximity.cpp  prune-doc.cpp  reformat.cpp  reformat.cpp.orig  retrieve.script  show-rslts.cpp  show-rslts.cpp.orig  show-rslts.mps  showcount.cpp  showcount.cpp.orig  soundex.cpp  stop.words  term-term-cohesion.cpp  tstquery  (+3 more)
Mumps-Projects/ISR/Mumps-version/: DocumentTermMatrix (copy).Mps  DocumentTermMatrix-loops.mps  DocumentTermMatrix.mps  Makefile  RetrieveMedlineMumps.mps  boolean.mps  chop.mps  clusterdd.mps  clustertt.mps  cohesion.mps  control.script  convert-db.script  dcount.mps  discrim.mps  docdoc1.mps  endtime.mps  fasterRetrieval.mps  fetch-sentences.mps  hclusterprint.mps  hypercluster.mps  idf-cutoff.mps  idf.mps  index.script  iterate.script  jLoad.mps  jaccardtt.mps  kwic.mps  kwoc.mps  loadTitles.mps  map.mps  preprocess-loops.mps  preprocess.copy  preprocess.mps  proxLoad.mps  proximity.mps  query1.mps  query2.mps  query3.mps  reformat.mps  reformatWiki.mps  (+16 more)
Mumps-Projects/OptBinaryTree/: 00Rreadme  input  knuth  knuth.cpp  knuth.mps
(+199 files in other folders)
